# booru-dl

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  genindex.html  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  test_main.py
.doctrees/: environment.pickle  index.doctree
.doctrees/files/: backend.doctree  config.doctree  main.doctree
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-pages.yml  check_code.yml  check_everything.yml  do-everything.yml
_sources/files/: main.rst.txt
booru_dl/: __init__.py  main.py
docs/: build.sh
docs/source/: conf.py  index.rst
docs/source/files/: backend.rst  config.rst  constants.rst  main.rst
files/: backend.html  config.html  main.html
src/: main.py
src/tests/: conftest.py  test_main.py
tests/: conftest.py  test_booru_dl.py  test_main.py
tests/test_library/: test_backend.py  test_config.py
