[tool.poetry]
name = "booru-dl"
version = "0.1.0"
description = "Automatic Downloading of any booru!"
authors = ["Nate Ruppert <nate.ruppert@csu.fullerton.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
