[tool.poetry]
name = "booru-dl"
version = "0.1.0"
description = "Automatic Downloading of any booru!"
authors = ["Nate Ruppert <nate.ruppert@csu.fullerton.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
Sphinx = "^4.0.2"
rinohtype = "^0.5.2"
sphinx-rtd-theme = "^0.5.2"
pydeps = "^1.9.13"
pytest = "^6.2.4"
flake8 = "^3.9.2"
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
