[tool.poetry]
name = "booru-dl"
version = "1.1"
description = "Automatic Downloading of any booru!"
authors = ["Nate Ruppert <nate.ruppert@csu.fullerton.edu>"]
license = "MIT"
packages = [
    { include = "booru_dl" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
cloudscraper = "^1.2.58"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
Sphinx = "^4.1.0"
rinohtype = "^0.5.3"
sphinx-rtd-theme = "^0.5.2"
pydeps = "^1.9.13"
pytest = "^6.2.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pytest-cov = "^2.12.1"
pyinstaller = "^4.3"
auto-py-to-exe = "^2.9.0"
pytest-xdist = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile='black'

[tool.black]
target-version = ['py39']
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)
'''
